--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "hono": "^4.10.5",
     "jwt": "^0.2.0",
     "postgres": "^3.4.7",
+    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
