--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.27"
+    "typeorm": "^0.3.27",
+    "uploadthing": "^7.7.4"
   },
   "devDependencies": {
     "@types/bun": "latest"
