--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
+    "@uploadthing/react": "^7.3.3",
     "lucide-react": "^0.554.0",
-    "react-dom": "^19.2.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "uploadthing": "^7.7.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
